// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button variant default should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1.fi-margin-xxs {
  margin: 5px;
}

.c1.fi-margin-xs {
  margin: 10px;
}

.c1.fi-margin-s {
  margin: 15px;
}

.c1.fi-margin-m {
  margin: 20px;
}

.c1.fi-margin-l {
  margin: 25px;
}

.c1.fi-margin-xl {
  margin: 30px;
}

.c1.fi-margin-xxl {
  margin: 40px;
}

.c1.fi-margin-xxxl {
  margin: 60px;
}

.c1.fi-margin-xxxxl {
  margin: 80px;
}

.c1.fi-margin-insetXxs {
  margin: 2px;
}

.c1.fi-margin-insetXs {
  margin: 4px;
}

.c1.fi-margin-insetS {
  margin: 6px;
}

.c1.fi-margin-insetM {
  margin: 8px;
}

.c1.fi-margin-insetL {
  margin: 10px;
}

.c1.fi-margin-insetXl {
  margin: 16px;
}

.c1.fi-margin-insetXxl {
  margin: 20px;
}

.c1.fi-margin-top-xxs {
  margin-top: 5px;
}

.c1.fi-margin-top-xs {
  margin-top: 10px;
}

.c1.fi-margin-top-s {
  margin-top: 15px;
}

.c1.fi-margin-top-m {
  margin-top: 20px;
}

.c1.fi-margin-top-l {
  margin-top: 25px;
}

.c1.fi-margin-top-xl {
  margin-top: 30px;
}

.c1.fi-margin-top-xxl {
  margin-top: 40px;
}

.c1.fi-margin-top-xxxl {
  margin-top: 60px;
}

.c1.fi-margin-top-xxxxl {
  margin-top: 80px;
}

.c1.fi-margin-top-insetXxs {
  margin-top: 2px;
}

.c1.fi-margin-top-insetXs {
  margin-top: 4px;
}

.c1.fi-margin-top-insetS {
  margin-top: 6px;
}

.c1.fi-margin-top-insetM {
  margin-top: 8px;
}

.c1.fi-margin-top-insetL {
  margin-top: 10px;
}

.c1.fi-margin-top-insetXl {
  margin-top: 16px;
}

.c1.fi-margin-top-insetXxl {
  margin-top: 20px;
}

.c1.fi-margin-right-xxs {
  margin-right: 5px;
}

.c1.fi-margin-right-xs {
  margin-right: 10px;
}

.c1.fi-margin-right-s {
  margin-right: 15px;
}

.c1.fi-margin-right-m {
  margin-right: 20px;
}

.c1.fi-margin-right-l {
  margin-right: 25px;
}

.c1.fi-margin-right-xl {
  margin-right: 30px;
}

.c1.fi-margin-right-xxl {
  margin-right: 40px;
}

.c1.fi-margin-right-xxxl {
  margin-right: 60px;
}

.c1.fi-margin-right-xxxxl {
  margin-right: 80px;
}

.c1.fi-margin-right-insetXxs {
  margin-right: 2px;
}

.c1.fi-margin-right-insetXs {
  margin-right: 4px;
}

.c1.fi-margin-right-insetS {
  margin-right: 6px;
}

.c1.fi-margin-right-insetM {
  margin-right: 8px;
}

.c1.fi-margin-right-insetL {
  margin-right: 10px;
}

.c1.fi-margin-right-insetXl {
  margin-right: 16px;
}

.c1.fi-margin-right-insetXxl {
  margin-right: 20px;
}

.c1.fi-margin-bottom-xxs {
  margin-bottom: 5px;
}

.c1.fi-margin-bottom-xs {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-s {
  margin-bottom: 15px;
}

.c1.fi-margin-bottom-m {
  margin-bottom: 20px;
}

.c1.fi-margin-bottom-l {
  margin-bottom: 25px;
}

.c1.fi-margin-bottom-xl {
  margin-bottom: 30px;
}

.c1.fi-margin-bottom-xxl {
  margin-bottom: 40px;
}

.c1.fi-margin-bottom-xxxl {
  margin-bottom: 60px;
}

.c1.fi-margin-bottom-xxxxl {
  margin-bottom: 80px;
}

.c1.fi-margin-bottom-insetXxs {
  margin-bottom: 2px;
}

.c1.fi-margin-bottom-insetXs {
  margin-bottom: 4px;
}

.c1.fi-margin-bottom-insetS {
  margin-bottom: 6px;
}

.c1.fi-margin-bottom-insetM {
  margin-bottom: 8px;
}

.c1.fi-margin-bottom-insetL {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-insetXl {
  margin-bottom: 16px;
}

.c1.fi-margin-bottom-insetXxl {
  margin-bottom: 20px;
}

.c1.fi-margin-left-xxs {
  margin-left: 5px;
}

.c1.fi-margin-left-xs {
  margin-left: 10px;
}

.c1.fi-margin-left-s {
  margin-left: 15px;
}

.c1.fi-margin-left-m {
  margin-left: 20px;
}

.c1.fi-margin-left-l {
  margin-left: 25px;
}

.c1.fi-margin-left-xl {
  margin-left: 30px;
}

.c1.fi-margin-left-xxl {
  margin-left: 40px;
}

.c1.fi-margin-left-xxxl {
  margin-left: 60px;
}

.c1.fi-margin-left-xxxxl {
  margin-left: 80px;
}

.c1.fi-margin-left-insetXxs {
  margin-left: 2px;
}

.c1.fi-margin-left-insetXs {
  margin-left: 4px;
}

.c1.fi-margin-left-insetS {
  margin-left: 6px;
}

.c1.fi-margin-left-insetM {
  margin-left: 8px;
}

.c1.fi-margin-left-insetL {
  margin-left: 10px;
}

.c1.fi-margin-left-insetXl {
  margin-left: 16px;
}

.c1.fi-margin-left-insetXxl {
  margin-left: 20px;
}

.c1.fi-padding-xxs {
  padding: 5px;
}

.c1.fi-padding-xs {
  padding: 10px;
}

.c1.fi-padding-s {
  padding: 15px;
}

.c1.fi-padding-m {
  padding: 20px;
}

.c1.fi-padding-l {
  padding: 25px;
}

.c1.fi-padding-xl {
  padding: 30px;
}

.c1.fi-padding-xxl {
  padding: 40px;
}

.c1.fi-padding-xxxl {
  padding: 60px;
}

.c1.fi-padding-xxxxl {
  padding: 80px;
}

.c1.fi-padding-insetXxs {
  padding: 2px;
}

.c1.fi-padding-insetXs {
  padding: 4px;
}

.c1.fi-padding-insetS {
  padding: 6px;
}

.c1.fi-padding-insetM {
  padding: 8px;
}

.c1.fi-padding-insetL {
  padding: 10px;
}

.c1.fi-padding-insetXl {
  padding: 16px;
}

.c1.fi-padding-insetXxl {
  padding: 20px;
}

.c1.fi-padding-top-xxs {
  padding-top: 5px;
}

.c1.fi-padding-top-xs {
  padding-top: 10px;
}

.c1.fi-padding-top-s {
  padding-top: 15px;
}

.c1.fi-padding-top-m {
  padding-top: 20px;
}

.c1.fi-padding-top-l {
  padding-top: 25px;
}

.c1.fi-padding-top-xl {
  padding-top: 30px;
}

.c1.fi-padding-top-xxl {
  padding-top: 40px;
}

.c1.fi-padding-top-xxxl {
  padding-top: 60px;
}

.c1.fi-padding-top-xxxxl {
  padding-top: 80px;
}

.c1.fi-padding-top-insetXxs {
  padding-top: 2px;
}

.c1.fi-padding-top-insetXs {
  padding-top: 4px;
}

.c1.fi-padding-top-insetS {
  padding-top: 6px;
}

.c1.fi-padding-top-insetM {
  padding-top: 8px;
}

.c1.fi-padding-top-insetL {
  padding-top: 10px;
}

.c1.fi-padding-top-insetXl {
  padding-top: 16px;
}

.c1.fi-padding-top-insetXxl {
  padding-top: 20px;
}

.c1.fi-padding-right-xxs {
  padding-right: 5px;
}

.c1.fi-padding-right-xs {
  padding-right: 10px;
}

.c1.fi-padding-right-s {
  padding-right: 15px;
}

.c1.fi-padding-right-m {
  padding-right: 20px;
}

.c1.fi-padding-right-l {
  padding-right: 25px;
}

.c1.fi-padding-right-xl {
  padding-right: 30px;
}

.c1.fi-padding-right-xxl {
  padding-right: 40px;
}

.c1.fi-padding-right-xxxl {
  padding-right: 60px;
}

.c1.fi-padding-right-xxxxl {
  padding-right: 80px;
}

.c1.fi-padding-right-insetXxs {
  padding-right: 2px;
}

.c1.fi-padding-right-insetXs {
  padding-right: 4px;
}

.c1.fi-padding-right-insetS {
  padding-right: 6px;
}

.c1.fi-padding-right-insetM {
  padding-right: 8px;
}

.c1.fi-padding-right-insetL {
  padding-right: 10px;
}

.c1.fi-padding-right-insetXl {
  padding-right: 16px;
}

.c1.fi-padding-right-insetXxl {
  padding-right: 20px;
}

.c1.fi-padding-bottom-xxs {
  padding-bottom: 5px;
}

.c1.fi-padding-bottom-xs {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-s {
  padding-bottom: 15px;
}

.c1.fi-padding-bottom-m {
  padding-bottom: 20px;
}

.c1.fi-padding-bottom-l {
  padding-bottom: 25px;
}

.c1.fi-padding-bottom-xl {
  padding-bottom: 30px;
}

.c1.fi-padding-bottom-xxl {
  padding-bottom: 40px;
}

.c1.fi-padding-bottom-xxxl {
  padding-bottom: 60px;
}

.c1.fi-padding-bottom-xxxxl {
  padding-bottom: 80px;
}

.c1.fi-padding-bottom-insetXxs {
  padding-bottom: 2px;
}

.c1.fi-padding-bottom-insetXs {
  padding-bottom: 4px;
}

.c1.fi-padding-bottom-insetS {
  padding-bottom: 6px;
}

.c1.fi-padding-bottom-insetM {
  padding-bottom: 8px;
}

.c1.fi-padding-bottom-insetL {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-insetXl {
  padding-bottom: 16px;
}

.c1.fi-padding-bottom-insetXxl {
  padding-bottom: 20px;
}

.c1.fi-padding-left-xxs {
  padding-left: 5px;
}

.c1.fi-padding-left-xs {
  padding-left: 10px;
}

.c1.fi-padding-left-s {
  padding-left: 15px;
}

.c1.fi-padding-left-m {
  padding-left: 20px;
}

.c1.fi-padding-left-l {
  padding-left: 25px;
}

.c1.fi-padding-left-xl {
  padding-left: 30px;
}

.c1.fi-padding-left-xxl {
  padding-left: 40px;
}

.c1.fi-padding-left-xxxl {
  padding-left: 60px;
}

.c1.fi-padding-left-xxxxl {
  padding-left: 80px;
}

.c1.fi-padding-left-insetXxs {
  padding-left: 2px;
}

.c1.fi-padding-left-insetXs {
  padding-left: 4px;
}

.c1.fi-padding-left-insetS {
  padding-left: 6px;
}

.c1.fi-padding-left-insetM {
  padding-left: 8px;
}

.c1.fi-padding-left-insetL {
  padding-left: 10px;
}

.c1.fi-padding-left-insetXl {
  padding-left: 16px;
}

.c1.fi-padding-left-insetXxl {
  padding-left: 20px;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1"
  tabindex="0"
  type="button"
>
  <span
    class="c2 fi-button_icon"
  />
  Button
  <span
    class="c2 fi-button_icon fi-button_icon--right"
  />
</button>
`;

exports[`Button variant inverted should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1.fi-margin-xxs {
  margin: 5px;
}

.c1.fi-margin-xs {
  margin: 10px;
}

.c1.fi-margin-s {
  margin: 15px;
}

.c1.fi-margin-m {
  margin: 20px;
}

.c1.fi-margin-l {
  margin: 25px;
}

.c1.fi-margin-xl {
  margin: 30px;
}

.c1.fi-margin-xxl {
  margin: 40px;
}

.c1.fi-margin-xxxl {
  margin: 60px;
}

.c1.fi-margin-xxxxl {
  margin: 80px;
}

.c1.fi-margin-insetXxs {
  margin: 2px;
}

.c1.fi-margin-insetXs {
  margin: 4px;
}

.c1.fi-margin-insetS {
  margin: 6px;
}

.c1.fi-margin-insetM {
  margin: 8px;
}

.c1.fi-margin-insetL {
  margin: 10px;
}

.c1.fi-margin-insetXl {
  margin: 16px;
}

.c1.fi-margin-insetXxl {
  margin: 20px;
}

.c1.fi-margin-top-xxs {
  margin-top: 5px;
}

.c1.fi-margin-top-xs {
  margin-top: 10px;
}

.c1.fi-margin-top-s {
  margin-top: 15px;
}

.c1.fi-margin-top-m {
  margin-top: 20px;
}

.c1.fi-margin-top-l {
  margin-top: 25px;
}

.c1.fi-margin-top-xl {
  margin-top: 30px;
}

.c1.fi-margin-top-xxl {
  margin-top: 40px;
}

.c1.fi-margin-top-xxxl {
  margin-top: 60px;
}

.c1.fi-margin-top-xxxxl {
  margin-top: 80px;
}

.c1.fi-margin-top-insetXxs {
  margin-top: 2px;
}

.c1.fi-margin-top-insetXs {
  margin-top: 4px;
}

.c1.fi-margin-top-insetS {
  margin-top: 6px;
}

.c1.fi-margin-top-insetM {
  margin-top: 8px;
}

.c1.fi-margin-top-insetL {
  margin-top: 10px;
}

.c1.fi-margin-top-insetXl {
  margin-top: 16px;
}

.c1.fi-margin-top-insetXxl {
  margin-top: 20px;
}

.c1.fi-margin-right-xxs {
  margin-right: 5px;
}

.c1.fi-margin-right-xs {
  margin-right: 10px;
}

.c1.fi-margin-right-s {
  margin-right: 15px;
}

.c1.fi-margin-right-m {
  margin-right: 20px;
}

.c1.fi-margin-right-l {
  margin-right: 25px;
}

.c1.fi-margin-right-xl {
  margin-right: 30px;
}

.c1.fi-margin-right-xxl {
  margin-right: 40px;
}

.c1.fi-margin-right-xxxl {
  margin-right: 60px;
}

.c1.fi-margin-right-xxxxl {
  margin-right: 80px;
}

.c1.fi-margin-right-insetXxs {
  margin-right: 2px;
}

.c1.fi-margin-right-insetXs {
  margin-right: 4px;
}

.c1.fi-margin-right-insetS {
  margin-right: 6px;
}

.c1.fi-margin-right-insetM {
  margin-right: 8px;
}

.c1.fi-margin-right-insetL {
  margin-right: 10px;
}

.c1.fi-margin-right-insetXl {
  margin-right: 16px;
}

.c1.fi-margin-right-insetXxl {
  margin-right: 20px;
}

.c1.fi-margin-bottom-xxs {
  margin-bottom: 5px;
}

.c1.fi-margin-bottom-xs {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-s {
  margin-bottom: 15px;
}

.c1.fi-margin-bottom-m {
  margin-bottom: 20px;
}

.c1.fi-margin-bottom-l {
  margin-bottom: 25px;
}

.c1.fi-margin-bottom-xl {
  margin-bottom: 30px;
}

.c1.fi-margin-bottom-xxl {
  margin-bottom: 40px;
}

.c1.fi-margin-bottom-xxxl {
  margin-bottom: 60px;
}

.c1.fi-margin-bottom-xxxxl {
  margin-bottom: 80px;
}

.c1.fi-margin-bottom-insetXxs {
  margin-bottom: 2px;
}

.c1.fi-margin-bottom-insetXs {
  margin-bottom: 4px;
}

.c1.fi-margin-bottom-insetS {
  margin-bottom: 6px;
}

.c1.fi-margin-bottom-insetM {
  margin-bottom: 8px;
}

.c1.fi-margin-bottom-insetL {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-insetXl {
  margin-bottom: 16px;
}

.c1.fi-margin-bottom-insetXxl {
  margin-bottom: 20px;
}

.c1.fi-margin-left-xxs {
  margin-left: 5px;
}

.c1.fi-margin-left-xs {
  margin-left: 10px;
}

.c1.fi-margin-left-s {
  margin-left: 15px;
}

.c1.fi-margin-left-m {
  margin-left: 20px;
}

.c1.fi-margin-left-l {
  margin-left: 25px;
}

.c1.fi-margin-left-xl {
  margin-left: 30px;
}

.c1.fi-margin-left-xxl {
  margin-left: 40px;
}

.c1.fi-margin-left-xxxl {
  margin-left: 60px;
}

.c1.fi-margin-left-xxxxl {
  margin-left: 80px;
}

.c1.fi-margin-left-insetXxs {
  margin-left: 2px;
}

.c1.fi-margin-left-insetXs {
  margin-left: 4px;
}

.c1.fi-margin-left-insetS {
  margin-left: 6px;
}

.c1.fi-margin-left-insetM {
  margin-left: 8px;
}

.c1.fi-margin-left-insetL {
  margin-left: 10px;
}

.c1.fi-margin-left-insetXl {
  margin-left: 16px;
}

.c1.fi-margin-left-insetXxl {
  margin-left: 20px;
}

.c1.fi-padding-xxs {
  padding: 5px;
}

.c1.fi-padding-xs {
  padding: 10px;
}

.c1.fi-padding-s {
  padding: 15px;
}

.c1.fi-padding-m {
  padding: 20px;
}

.c1.fi-padding-l {
  padding: 25px;
}

.c1.fi-padding-xl {
  padding: 30px;
}

.c1.fi-padding-xxl {
  padding: 40px;
}

.c1.fi-padding-xxxl {
  padding: 60px;
}

.c1.fi-padding-xxxxl {
  padding: 80px;
}

.c1.fi-padding-insetXxs {
  padding: 2px;
}

.c1.fi-padding-insetXs {
  padding: 4px;
}

.c1.fi-padding-insetS {
  padding: 6px;
}

.c1.fi-padding-insetM {
  padding: 8px;
}

.c1.fi-padding-insetL {
  padding: 10px;
}

.c1.fi-padding-insetXl {
  padding: 16px;
}

.c1.fi-padding-insetXxl {
  padding: 20px;
}

.c1.fi-padding-top-xxs {
  padding-top: 5px;
}

.c1.fi-padding-top-xs {
  padding-top: 10px;
}

.c1.fi-padding-top-s {
  padding-top: 15px;
}

.c1.fi-padding-top-m {
  padding-top: 20px;
}

.c1.fi-padding-top-l {
  padding-top: 25px;
}

.c1.fi-padding-top-xl {
  padding-top: 30px;
}

.c1.fi-padding-top-xxl {
  padding-top: 40px;
}

.c1.fi-padding-top-xxxl {
  padding-top: 60px;
}

.c1.fi-padding-top-xxxxl {
  padding-top: 80px;
}

.c1.fi-padding-top-insetXxs {
  padding-top: 2px;
}

.c1.fi-padding-top-insetXs {
  padding-top: 4px;
}

.c1.fi-padding-top-insetS {
  padding-top: 6px;
}

.c1.fi-padding-top-insetM {
  padding-top: 8px;
}

.c1.fi-padding-top-insetL {
  padding-top: 10px;
}

.c1.fi-padding-top-insetXl {
  padding-top: 16px;
}

.c1.fi-padding-top-insetXxl {
  padding-top: 20px;
}

.c1.fi-padding-right-xxs {
  padding-right: 5px;
}

.c1.fi-padding-right-xs {
  padding-right: 10px;
}

.c1.fi-padding-right-s {
  padding-right: 15px;
}

.c1.fi-padding-right-m {
  padding-right: 20px;
}

.c1.fi-padding-right-l {
  padding-right: 25px;
}

.c1.fi-padding-right-xl {
  padding-right: 30px;
}

.c1.fi-padding-right-xxl {
  padding-right: 40px;
}

.c1.fi-padding-right-xxxl {
  padding-right: 60px;
}

.c1.fi-padding-right-xxxxl {
  padding-right: 80px;
}

.c1.fi-padding-right-insetXxs {
  padding-right: 2px;
}

.c1.fi-padding-right-insetXs {
  padding-right: 4px;
}

.c1.fi-padding-right-insetS {
  padding-right: 6px;
}

.c1.fi-padding-right-insetM {
  padding-right: 8px;
}

.c1.fi-padding-right-insetL {
  padding-right: 10px;
}

.c1.fi-padding-right-insetXl {
  padding-right: 16px;
}

.c1.fi-padding-right-insetXxl {
  padding-right: 20px;
}

.c1.fi-padding-bottom-xxs {
  padding-bottom: 5px;
}

.c1.fi-padding-bottom-xs {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-s {
  padding-bottom: 15px;
}

.c1.fi-padding-bottom-m {
  padding-bottom: 20px;
}

.c1.fi-padding-bottom-l {
  padding-bottom: 25px;
}

.c1.fi-padding-bottom-xl {
  padding-bottom: 30px;
}

.c1.fi-padding-bottom-xxl {
  padding-bottom: 40px;
}

.c1.fi-padding-bottom-xxxl {
  padding-bottom: 60px;
}

.c1.fi-padding-bottom-xxxxl {
  padding-bottom: 80px;
}

.c1.fi-padding-bottom-insetXxs {
  padding-bottom: 2px;
}

.c1.fi-padding-bottom-insetXs {
  padding-bottom: 4px;
}

.c1.fi-padding-bottom-insetS {
  padding-bottom: 6px;
}

.c1.fi-padding-bottom-insetM {
  padding-bottom: 8px;
}

.c1.fi-padding-bottom-insetL {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-insetXl {
  padding-bottom: 16px;
}

.c1.fi-padding-bottom-insetXxl {
  padding-bottom: 20px;
}

.c1.fi-padding-left-xxs {
  padding-left: 5px;
}

.c1.fi-padding-left-xs {
  padding-left: 10px;
}

.c1.fi-padding-left-s {
  padding-left: 15px;
}

.c1.fi-padding-left-m {
  padding-left: 20px;
}

.c1.fi-padding-left-l {
  padding-left: 25px;
}

.c1.fi-padding-left-xl {
  padding-left: 30px;
}

.c1.fi-padding-left-xxl {
  padding-left: 40px;
}

.c1.fi-padding-left-xxxl {
  padding-left: 60px;
}

.c1.fi-padding-left-xxxxl {
  padding-left: 80px;
}

.c1.fi-padding-left-insetXxs {
  padding-left: 2px;
}

.c1.fi-padding-left-insetXs {
  padding-left: 4px;
}

.c1.fi-padding-left-insetS {
  padding-left: 6px;
}

.c1.fi-padding-left-insetM {
  padding-left: 8px;
}

.c1.fi-padding-left-insetL {
  padding-left: 10px;
}

.c1.fi-padding-left-insetXl {
  padding-left: 16px;
}

.c1.fi-padding-left-insetXxl {
  padding-left: 20px;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--inverted"
  tabindex="0"
  type="button"
>
  <span
    class="c2 fi-button_icon"
  />
  Inverted button
  <span
    class="c2 fi-button_icon fi-button_icon--right"
  />
</button>
`;

exports[`Button variant link match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1.fi-margin-xxs {
  margin: 5px;
}

.c1.fi-margin-xs {
  margin: 10px;
}

.c1.fi-margin-s {
  margin: 15px;
}

.c1.fi-margin-m {
  margin: 20px;
}

.c1.fi-margin-l {
  margin: 25px;
}

.c1.fi-margin-xl {
  margin: 30px;
}

.c1.fi-margin-xxl {
  margin: 40px;
}

.c1.fi-margin-xxxl {
  margin: 60px;
}

.c1.fi-margin-xxxxl {
  margin: 80px;
}

.c1.fi-margin-insetXxs {
  margin: 2px;
}

.c1.fi-margin-insetXs {
  margin: 4px;
}

.c1.fi-margin-insetS {
  margin: 6px;
}

.c1.fi-margin-insetM {
  margin: 8px;
}

.c1.fi-margin-insetL {
  margin: 10px;
}

.c1.fi-margin-insetXl {
  margin: 16px;
}

.c1.fi-margin-insetXxl {
  margin: 20px;
}

.c1.fi-margin-top-xxs {
  margin-top: 5px;
}

.c1.fi-margin-top-xs {
  margin-top: 10px;
}

.c1.fi-margin-top-s {
  margin-top: 15px;
}

.c1.fi-margin-top-m {
  margin-top: 20px;
}

.c1.fi-margin-top-l {
  margin-top: 25px;
}

.c1.fi-margin-top-xl {
  margin-top: 30px;
}

.c1.fi-margin-top-xxl {
  margin-top: 40px;
}

.c1.fi-margin-top-xxxl {
  margin-top: 60px;
}

.c1.fi-margin-top-xxxxl {
  margin-top: 80px;
}

.c1.fi-margin-top-insetXxs {
  margin-top: 2px;
}

.c1.fi-margin-top-insetXs {
  margin-top: 4px;
}

.c1.fi-margin-top-insetS {
  margin-top: 6px;
}

.c1.fi-margin-top-insetM {
  margin-top: 8px;
}

.c1.fi-margin-top-insetL {
  margin-top: 10px;
}

.c1.fi-margin-top-insetXl {
  margin-top: 16px;
}

.c1.fi-margin-top-insetXxl {
  margin-top: 20px;
}

.c1.fi-margin-right-xxs {
  margin-right: 5px;
}

.c1.fi-margin-right-xs {
  margin-right: 10px;
}

.c1.fi-margin-right-s {
  margin-right: 15px;
}

.c1.fi-margin-right-m {
  margin-right: 20px;
}

.c1.fi-margin-right-l {
  margin-right: 25px;
}

.c1.fi-margin-right-xl {
  margin-right: 30px;
}

.c1.fi-margin-right-xxl {
  margin-right: 40px;
}

.c1.fi-margin-right-xxxl {
  margin-right: 60px;
}

.c1.fi-margin-right-xxxxl {
  margin-right: 80px;
}

.c1.fi-margin-right-insetXxs {
  margin-right: 2px;
}

.c1.fi-margin-right-insetXs {
  margin-right: 4px;
}

.c1.fi-margin-right-insetS {
  margin-right: 6px;
}

.c1.fi-margin-right-insetM {
  margin-right: 8px;
}

.c1.fi-margin-right-insetL {
  margin-right: 10px;
}

.c1.fi-margin-right-insetXl {
  margin-right: 16px;
}

.c1.fi-margin-right-insetXxl {
  margin-right: 20px;
}

.c1.fi-margin-bottom-xxs {
  margin-bottom: 5px;
}

.c1.fi-margin-bottom-xs {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-s {
  margin-bottom: 15px;
}

.c1.fi-margin-bottom-m {
  margin-bottom: 20px;
}

.c1.fi-margin-bottom-l {
  margin-bottom: 25px;
}

.c1.fi-margin-bottom-xl {
  margin-bottom: 30px;
}

.c1.fi-margin-bottom-xxl {
  margin-bottom: 40px;
}

.c1.fi-margin-bottom-xxxl {
  margin-bottom: 60px;
}

.c1.fi-margin-bottom-xxxxl {
  margin-bottom: 80px;
}

.c1.fi-margin-bottom-insetXxs {
  margin-bottom: 2px;
}

.c1.fi-margin-bottom-insetXs {
  margin-bottom: 4px;
}

.c1.fi-margin-bottom-insetS {
  margin-bottom: 6px;
}

.c1.fi-margin-bottom-insetM {
  margin-bottom: 8px;
}

.c1.fi-margin-bottom-insetL {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-insetXl {
  margin-bottom: 16px;
}

.c1.fi-margin-bottom-insetXxl {
  margin-bottom: 20px;
}

.c1.fi-margin-left-xxs {
  margin-left: 5px;
}

.c1.fi-margin-left-xs {
  margin-left: 10px;
}

.c1.fi-margin-left-s {
  margin-left: 15px;
}

.c1.fi-margin-left-m {
  margin-left: 20px;
}

.c1.fi-margin-left-l {
  margin-left: 25px;
}

.c1.fi-margin-left-xl {
  margin-left: 30px;
}

.c1.fi-margin-left-xxl {
  margin-left: 40px;
}

.c1.fi-margin-left-xxxl {
  margin-left: 60px;
}

.c1.fi-margin-left-xxxxl {
  margin-left: 80px;
}

.c1.fi-margin-left-insetXxs {
  margin-left: 2px;
}

.c1.fi-margin-left-insetXs {
  margin-left: 4px;
}

.c1.fi-margin-left-insetS {
  margin-left: 6px;
}

.c1.fi-margin-left-insetM {
  margin-left: 8px;
}

.c1.fi-margin-left-insetL {
  margin-left: 10px;
}

.c1.fi-margin-left-insetXl {
  margin-left: 16px;
}

.c1.fi-margin-left-insetXxl {
  margin-left: 20px;
}

.c1.fi-padding-xxs {
  padding: 5px;
}

.c1.fi-padding-xs {
  padding: 10px;
}

.c1.fi-padding-s {
  padding: 15px;
}

.c1.fi-padding-m {
  padding: 20px;
}

.c1.fi-padding-l {
  padding: 25px;
}

.c1.fi-padding-xl {
  padding: 30px;
}

.c1.fi-padding-xxl {
  padding: 40px;
}

.c1.fi-padding-xxxl {
  padding: 60px;
}

.c1.fi-padding-xxxxl {
  padding: 80px;
}

.c1.fi-padding-insetXxs {
  padding: 2px;
}

.c1.fi-padding-insetXs {
  padding: 4px;
}

.c1.fi-padding-insetS {
  padding: 6px;
}

.c1.fi-padding-insetM {
  padding: 8px;
}

.c1.fi-padding-insetL {
  padding: 10px;
}

.c1.fi-padding-insetXl {
  padding: 16px;
}

.c1.fi-padding-insetXxl {
  padding: 20px;
}

.c1.fi-padding-top-xxs {
  padding-top: 5px;
}

.c1.fi-padding-top-xs {
  padding-top: 10px;
}

.c1.fi-padding-top-s {
  padding-top: 15px;
}

.c1.fi-padding-top-m {
  padding-top: 20px;
}

.c1.fi-padding-top-l {
  padding-top: 25px;
}

.c1.fi-padding-top-xl {
  padding-top: 30px;
}

.c1.fi-padding-top-xxl {
  padding-top: 40px;
}

.c1.fi-padding-top-xxxl {
  padding-top: 60px;
}

.c1.fi-padding-top-xxxxl {
  padding-top: 80px;
}

.c1.fi-padding-top-insetXxs {
  padding-top: 2px;
}

.c1.fi-padding-top-insetXs {
  padding-top: 4px;
}

.c1.fi-padding-top-insetS {
  padding-top: 6px;
}

.c1.fi-padding-top-insetM {
  padding-top: 8px;
}

.c1.fi-padding-top-insetL {
  padding-top: 10px;
}

.c1.fi-padding-top-insetXl {
  padding-top: 16px;
}

.c1.fi-padding-top-insetXxl {
  padding-top: 20px;
}

.c1.fi-padding-right-xxs {
  padding-right: 5px;
}

.c1.fi-padding-right-xs {
  padding-right: 10px;
}

.c1.fi-padding-right-s {
  padding-right: 15px;
}

.c1.fi-padding-right-m {
  padding-right: 20px;
}

.c1.fi-padding-right-l {
  padding-right: 25px;
}

.c1.fi-padding-right-xl {
  padding-right: 30px;
}

.c1.fi-padding-right-xxl {
  padding-right: 40px;
}

.c1.fi-padding-right-xxxl {
  padding-right: 60px;
}

.c1.fi-padding-right-xxxxl {
  padding-right: 80px;
}

.c1.fi-padding-right-insetXxs {
  padding-right: 2px;
}

.c1.fi-padding-right-insetXs {
  padding-right: 4px;
}

.c1.fi-padding-right-insetS {
  padding-right: 6px;
}

.c1.fi-padding-right-insetM {
  padding-right: 8px;
}

.c1.fi-padding-right-insetL {
  padding-right: 10px;
}

.c1.fi-padding-right-insetXl {
  padding-right: 16px;
}

.c1.fi-padding-right-insetXxl {
  padding-right: 20px;
}

.c1.fi-padding-bottom-xxs {
  padding-bottom: 5px;
}

.c1.fi-padding-bottom-xs {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-s {
  padding-bottom: 15px;
}

.c1.fi-padding-bottom-m {
  padding-bottom: 20px;
}

.c1.fi-padding-bottom-l {
  padding-bottom: 25px;
}

.c1.fi-padding-bottom-xl {
  padding-bottom: 30px;
}

.c1.fi-padding-bottom-xxl {
  padding-bottom: 40px;
}

.c1.fi-padding-bottom-xxxl {
  padding-bottom: 60px;
}

.c1.fi-padding-bottom-xxxxl {
  padding-bottom: 80px;
}

.c1.fi-padding-bottom-insetXxs {
  padding-bottom: 2px;
}

.c1.fi-padding-bottom-insetXs {
  padding-bottom: 4px;
}

.c1.fi-padding-bottom-insetS {
  padding-bottom: 6px;
}

.c1.fi-padding-bottom-insetM {
  padding-bottom: 8px;
}

.c1.fi-padding-bottom-insetL {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-insetXl {
  padding-bottom: 16px;
}

.c1.fi-padding-bottom-insetXxl {
  padding-bottom: 20px;
}

.c1.fi-padding-left-xxs {
  padding-left: 5px;
}

.c1.fi-padding-left-xs {
  padding-left: 10px;
}

.c1.fi-padding-left-s {
  padding-left: 15px;
}

.c1.fi-padding-left-m {
  padding-left: 20px;
}

.c1.fi-padding-left-l {
  padding-left: 25px;
}

.c1.fi-padding-left-xl {
  padding-left: 30px;
}

.c1.fi-padding-left-xxl {
  padding-left: 40px;
}

.c1.fi-padding-left-xxxl {
  padding-left: 60px;
}

.c1.fi-padding-left-xxxxl {
  padding-left: 80px;
}

.c1.fi-padding-left-insetXxs {
  padding-left: 2px;
}

.c1.fi-padding-left-insetXs {
  padding-left: 4px;
}

.c1.fi-padding-left-insetS {
  padding-left: 6px;
}

.c1.fi-padding-left-insetM {
  padding-left: 8px;
}

.c1.fi-padding-left-insetL {
  padding-left: 10px;
}

.c1.fi-padding-left-insetXl {
  padding-left: 16px;
}

.c1.fi-padding-left-insetXxl {
  padding-left: 20px;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--secondary-light"
  tabindex="0"
  type="button"
>
  <span
    class="c2 fi-button_icon"
  />
  Secondary light button
  <span
    class="c2 fi-button_icon fi-button_icon--right"
  />
</button>
`;

exports[`Button variant secondary should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1.fi-margin-xxs {
  margin: 5px;
}

.c1.fi-margin-xs {
  margin: 10px;
}

.c1.fi-margin-s {
  margin: 15px;
}

.c1.fi-margin-m {
  margin: 20px;
}

.c1.fi-margin-l {
  margin: 25px;
}

.c1.fi-margin-xl {
  margin: 30px;
}

.c1.fi-margin-xxl {
  margin: 40px;
}

.c1.fi-margin-xxxl {
  margin: 60px;
}

.c1.fi-margin-xxxxl {
  margin: 80px;
}

.c1.fi-margin-insetXxs {
  margin: 2px;
}

.c1.fi-margin-insetXs {
  margin: 4px;
}

.c1.fi-margin-insetS {
  margin: 6px;
}

.c1.fi-margin-insetM {
  margin: 8px;
}

.c1.fi-margin-insetL {
  margin: 10px;
}

.c1.fi-margin-insetXl {
  margin: 16px;
}

.c1.fi-margin-insetXxl {
  margin: 20px;
}

.c1.fi-margin-top-xxs {
  margin-top: 5px;
}

.c1.fi-margin-top-xs {
  margin-top: 10px;
}

.c1.fi-margin-top-s {
  margin-top: 15px;
}

.c1.fi-margin-top-m {
  margin-top: 20px;
}

.c1.fi-margin-top-l {
  margin-top: 25px;
}

.c1.fi-margin-top-xl {
  margin-top: 30px;
}

.c1.fi-margin-top-xxl {
  margin-top: 40px;
}

.c1.fi-margin-top-xxxl {
  margin-top: 60px;
}

.c1.fi-margin-top-xxxxl {
  margin-top: 80px;
}

.c1.fi-margin-top-insetXxs {
  margin-top: 2px;
}

.c1.fi-margin-top-insetXs {
  margin-top: 4px;
}

.c1.fi-margin-top-insetS {
  margin-top: 6px;
}

.c1.fi-margin-top-insetM {
  margin-top: 8px;
}

.c1.fi-margin-top-insetL {
  margin-top: 10px;
}

.c1.fi-margin-top-insetXl {
  margin-top: 16px;
}

.c1.fi-margin-top-insetXxl {
  margin-top: 20px;
}

.c1.fi-margin-right-xxs {
  margin-right: 5px;
}

.c1.fi-margin-right-xs {
  margin-right: 10px;
}

.c1.fi-margin-right-s {
  margin-right: 15px;
}

.c1.fi-margin-right-m {
  margin-right: 20px;
}

.c1.fi-margin-right-l {
  margin-right: 25px;
}

.c1.fi-margin-right-xl {
  margin-right: 30px;
}

.c1.fi-margin-right-xxl {
  margin-right: 40px;
}

.c1.fi-margin-right-xxxl {
  margin-right: 60px;
}

.c1.fi-margin-right-xxxxl {
  margin-right: 80px;
}

.c1.fi-margin-right-insetXxs {
  margin-right: 2px;
}

.c1.fi-margin-right-insetXs {
  margin-right: 4px;
}

.c1.fi-margin-right-insetS {
  margin-right: 6px;
}

.c1.fi-margin-right-insetM {
  margin-right: 8px;
}

.c1.fi-margin-right-insetL {
  margin-right: 10px;
}

.c1.fi-margin-right-insetXl {
  margin-right: 16px;
}

.c1.fi-margin-right-insetXxl {
  margin-right: 20px;
}

.c1.fi-margin-bottom-xxs {
  margin-bottom: 5px;
}

.c1.fi-margin-bottom-xs {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-s {
  margin-bottom: 15px;
}

.c1.fi-margin-bottom-m {
  margin-bottom: 20px;
}

.c1.fi-margin-bottom-l {
  margin-bottom: 25px;
}

.c1.fi-margin-bottom-xl {
  margin-bottom: 30px;
}

.c1.fi-margin-bottom-xxl {
  margin-bottom: 40px;
}

.c1.fi-margin-bottom-xxxl {
  margin-bottom: 60px;
}

.c1.fi-margin-bottom-xxxxl {
  margin-bottom: 80px;
}

.c1.fi-margin-bottom-insetXxs {
  margin-bottom: 2px;
}

.c1.fi-margin-bottom-insetXs {
  margin-bottom: 4px;
}

.c1.fi-margin-bottom-insetS {
  margin-bottom: 6px;
}

.c1.fi-margin-bottom-insetM {
  margin-bottom: 8px;
}

.c1.fi-margin-bottom-insetL {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-insetXl {
  margin-bottom: 16px;
}

.c1.fi-margin-bottom-insetXxl {
  margin-bottom: 20px;
}

.c1.fi-margin-left-xxs {
  margin-left: 5px;
}

.c1.fi-margin-left-xs {
  margin-left: 10px;
}

.c1.fi-margin-left-s {
  margin-left: 15px;
}

.c1.fi-margin-left-m {
  margin-left: 20px;
}

.c1.fi-margin-left-l {
  margin-left: 25px;
}

.c1.fi-margin-left-xl {
  margin-left: 30px;
}

.c1.fi-margin-left-xxl {
  margin-left: 40px;
}

.c1.fi-margin-left-xxxl {
  margin-left: 60px;
}

.c1.fi-margin-left-xxxxl {
  margin-left: 80px;
}

.c1.fi-margin-left-insetXxs {
  margin-left: 2px;
}

.c1.fi-margin-left-insetXs {
  margin-left: 4px;
}

.c1.fi-margin-left-insetS {
  margin-left: 6px;
}

.c1.fi-margin-left-insetM {
  margin-left: 8px;
}

.c1.fi-margin-left-insetL {
  margin-left: 10px;
}

.c1.fi-margin-left-insetXl {
  margin-left: 16px;
}

.c1.fi-margin-left-insetXxl {
  margin-left: 20px;
}

.c1.fi-padding-xxs {
  padding: 5px;
}

.c1.fi-padding-xs {
  padding: 10px;
}

.c1.fi-padding-s {
  padding: 15px;
}

.c1.fi-padding-m {
  padding: 20px;
}

.c1.fi-padding-l {
  padding: 25px;
}

.c1.fi-padding-xl {
  padding: 30px;
}

.c1.fi-padding-xxl {
  padding: 40px;
}

.c1.fi-padding-xxxl {
  padding: 60px;
}

.c1.fi-padding-xxxxl {
  padding: 80px;
}

.c1.fi-padding-insetXxs {
  padding: 2px;
}

.c1.fi-padding-insetXs {
  padding: 4px;
}

.c1.fi-padding-insetS {
  padding: 6px;
}

.c1.fi-padding-insetM {
  padding: 8px;
}

.c1.fi-padding-insetL {
  padding: 10px;
}

.c1.fi-padding-insetXl {
  padding: 16px;
}

.c1.fi-padding-insetXxl {
  padding: 20px;
}

.c1.fi-padding-top-xxs {
  padding-top: 5px;
}

.c1.fi-padding-top-xs {
  padding-top: 10px;
}

.c1.fi-padding-top-s {
  padding-top: 15px;
}

.c1.fi-padding-top-m {
  padding-top: 20px;
}

.c1.fi-padding-top-l {
  padding-top: 25px;
}

.c1.fi-padding-top-xl {
  padding-top: 30px;
}

.c1.fi-padding-top-xxl {
  padding-top: 40px;
}

.c1.fi-padding-top-xxxl {
  padding-top: 60px;
}

.c1.fi-padding-top-xxxxl {
  padding-top: 80px;
}

.c1.fi-padding-top-insetXxs {
  padding-top: 2px;
}

.c1.fi-padding-top-insetXs {
  padding-top: 4px;
}

.c1.fi-padding-top-insetS {
  padding-top: 6px;
}

.c1.fi-padding-top-insetM {
  padding-top: 8px;
}

.c1.fi-padding-top-insetL {
  padding-top: 10px;
}

.c1.fi-padding-top-insetXl {
  padding-top: 16px;
}

.c1.fi-padding-top-insetXxl {
  padding-top: 20px;
}

.c1.fi-padding-right-xxs {
  padding-right: 5px;
}

.c1.fi-padding-right-xs {
  padding-right: 10px;
}

.c1.fi-padding-right-s {
  padding-right: 15px;
}

.c1.fi-padding-right-m {
  padding-right: 20px;
}

.c1.fi-padding-right-l {
  padding-right: 25px;
}

.c1.fi-padding-right-xl {
  padding-right: 30px;
}

.c1.fi-padding-right-xxl {
  padding-right: 40px;
}

.c1.fi-padding-right-xxxl {
  padding-right: 60px;
}

.c1.fi-padding-right-xxxxl {
  padding-right: 80px;
}

.c1.fi-padding-right-insetXxs {
  padding-right: 2px;
}

.c1.fi-padding-right-insetXs {
  padding-right: 4px;
}

.c1.fi-padding-right-insetS {
  padding-right: 6px;
}

.c1.fi-padding-right-insetM {
  padding-right: 8px;
}

.c1.fi-padding-right-insetL {
  padding-right: 10px;
}

.c1.fi-padding-right-insetXl {
  padding-right: 16px;
}

.c1.fi-padding-right-insetXxl {
  padding-right: 20px;
}

.c1.fi-padding-bottom-xxs {
  padding-bottom: 5px;
}

.c1.fi-padding-bottom-xs {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-s {
  padding-bottom: 15px;
}

.c1.fi-padding-bottom-m {
  padding-bottom: 20px;
}

.c1.fi-padding-bottom-l {
  padding-bottom: 25px;
}

.c1.fi-padding-bottom-xl {
  padding-bottom: 30px;
}

.c1.fi-padding-bottom-xxl {
  padding-bottom: 40px;
}

.c1.fi-padding-bottom-xxxl {
  padding-bottom: 60px;
}

.c1.fi-padding-bottom-xxxxl {
  padding-bottom: 80px;
}

.c1.fi-padding-bottom-insetXxs {
  padding-bottom: 2px;
}

.c1.fi-padding-bottom-insetXs {
  padding-bottom: 4px;
}

.c1.fi-padding-bottom-insetS {
  padding-bottom: 6px;
}

.c1.fi-padding-bottom-insetM {
  padding-bottom: 8px;
}

.c1.fi-padding-bottom-insetL {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-insetXl {
  padding-bottom: 16px;
}

.c1.fi-padding-bottom-insetXxl {
  padding-bottom: 20px;
}

.c1.fi-padding-left-xxs {
  padding-left: 5px;
}

.c1.fi-padding-left-xs {
  padding-left: 10px;
}

.c1.fi-padding-left-s {
  padding-left: 15px;
}

.c1.fi-padding-left-m {
  padding-left: 20px;
}

.c1.fi-padding-left-l {
  padding-left: 25px;
}

.c1.fi-padding-left-xl {
  padding-left: 30px;
}

.c1.fi-padding-left-xxl {
  padding-left: 40px;
}

.c1.fi-padding-left-xxxl {
  padding-left: 60px;
}

.c1.fi-padding-left-xxxxl {
  padding-left: 80px;
}

.c1.fi-padding-left-insetXxs {
  padding-left: 2px;
}

.c1.fi-padding-left-insetXs {
  padding-left: 4px;
}

.c1.fi-padding-left-insetS {
  padding-left: 6px;
}

.c1.fi-padding-left-insetM {
  padding-left: 8px;
}

.c1.fi-padding-left-insetL {
  padding-left: 10px;
}

.c1.fi-padding-left-insetXl {
  padding-left: 16px;
}

.c1.fi-padding-left-insetXxl {
  padding-left: 20px;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--secondary"
  tabindex="0"
  type="button"
>
  <span
    class="c2 fi-button_icon"
  />
  Secondary button
  <span
    class="c2 fi-button_icon fi-button_icon--right"
  />
</button>
`;

exports[`Button variant secondaryNoBorder should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 10px 20px;
  min-height: 40px;
  color: hsl(0,0%,100%);
  background: linear-gradient(0deg,hsl(212,63%,37%) 0%,hsl(212,63%,45%) 100%);
  border-radius: 2px;
  text-align: center;
  text-shadow: 0 1px 1px hsla(214,100%,24%,0.5);
  cursor: pointer;
  border: 1px solid transparent;
}

.c1.fi-margin-xxs {
  margin: 5px;
}

.c1.fi-margin-xs {
  margin: 10px;
}

.c1.fi-margin-s {
  margin: 15px;
}

.c1.fi-margin-m {
  margin: 20px;
}

.c1.fi-margin-l {
  margin: 25px;
}

.c1.fi-margin-xl {
  margin: 30px;
}

.c1.fi-margin-xxl {
  margin: 40px;
}

.c1.fi-margin-xxxl {
  margin: 60px;
}

.c1.fi-margin-xxxxl {
  margin: 80px;
}

.c1.fi-margin-insetXxs {
  margin: 2px;
}

.c1.fi-margin-insetXs {
  margin: 4px;
}

.c1.fi-margin-insetS {
  margin: 6px;
}

.c1.fi-margin-insetM {
  margin: 8px;
}

.c1.fi-margin-insetL {
  margin: 10px;
}

.c1.fi-margin-insetXl {
  margin: 16px;
}

.c1.fi-margin-insetXxl {
  margin: 20px;
}

.c1.fi-margin-top-xxs {
  margin-top: 5px;
}

.c1.fi-margin-top-xs {
  margin-top: 10px;
}

.c1.fi-margin-top-s {
  margin-top: 15px;
}

.c1.fi-margin-top-m {
  margin-top: 20px;
}

.c1.fi-margin-top-l {
  margin-top: 25px;
}

.c1.fi-margin-top-xl {
  margin-top: 30px;
}

.c1.fi-margin-top-xxl {
  margin-top: 40px;
}

.c1.fi-margin-top-xxxl {
  margin-top: 60px;
}

.c1.fi-margin-top-xxxxl {
  margin-top: 80px;
}

.c1.fi-margin-top-insetXxs {
  margin-top: 2px;
}

.c1.fi-margin-top-insetXs {
  margin-top: 4px;
}

.c1.fi-margin-top-insetS {
  margin-top: 6px;
}

.c1.fi-margin-top-insetM {
  margin-top: 8px;
}

.c1.fi-margin-top-insetL {
  margin-top: 10px;
}

.c1.fi-margin-top-insetXl {
  margin-top: 16px;
}

.c1.fi-margin-top-insetXxl {
  margin-top: 20px;
}

.c1.fi-margin-right-xxs {
  margin-right: 5px;
}

.c1.fi-margin-right-xs {
  margin-right: 10px;
}

.c1.fi-margin-right-s {
  margin-right: 15px;
}

.c1.fi-margin-right-m {
  margin-right: 20px;
}

.c1.fi-margin-right-l {
  margin-right: 25px;
}

.c1.fi-margin-right-xl {
  margin-right: 30px;
}

.c1.fi-margin-right-xxl {
  margin-right: 40px;
}

.c1.fi-margin-right-xxxl {
  margin-right: 60px;
}

.c1.fi-margin-right-xxxxl {
  margin-right: 80px;
}

.c1.fi-margin-right-insetXxs {
  margin-right: 2px;
}

.c1.fi-margin-right-insetXs {
  margin-right: 4px;
}

.c1.fi-margin-right-insetS {
  margin-right: 6px;
}

.c1.fi-margin-right-insetM {
  margin-right: 8px;
}

.c1.fi-margin-right-insetL {
  margin-right: 10px;
}

.c1.fi-margin-right-insetXl {
  margin-right: 16px;
}

.c1.fi-margin-right-insetXxl {
  margin-right: 20px;
}

.c1.fi-margin-bottom-xxs {
  margin-bottom: 5px;
}

.c1.fi-margin-bottom-xs {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-s {
  margin-bottom: 15px;
}

.c1.fi-margin-bottom-m {
  margin-bottom: 20px;
}

.c1.fi-margin-bottom-l {
  margin-bottom: 25px;
}

.c1.fi-margin-bottom-xl {
  margin-bottom: 30px;
}

.c1.fi-margin-bottom-xxl {
  margin-bottom: 40px;
}

.c1.fi-margin-bottom-xxxl {
  margin-bottom: 60px;
}

.c1.fi-margin-bottom-xxxxl {
  margin-bottom: 80px;
}

.c1.fi-margin-bottom-insetXxs {
  margin-bottom: 2px;
}

.c1.fi-margin-bottom-insetXs {
  margin-bottom: 4px;
}

.c1.fi-margin-bottom-insetS {
  margin-bottom: 6px;
}

.c1.fi-margin-bottom-insetM {
  margin-bottom: 8px;
}

.c1.fi-margin-bottom-insetL {
  margin-bottom: 10px;
}

.c1.fi-margin-bottom-insetXl {
  margin-bottom: 16px;
}

.c1.fi-margin-bottom-insetXxl {
  margin-bottom: 20px;
}

.c1.fi-margin-left-xxs {
  margin-left: 5px;
}

.c1.fi-margin-left-xs {
  margin-left: 10px;
}

.c1.fi-margin-left-s {
  margin-left: 15px;
}

.c1.fi-margin-left-m {
  margin-left: 20px;
}

.c1.fi-margin-left-l {
  margin-left: 25px;
}

.c1.fi-margin-left-xl {
  margin-left: 30px;
}

.c1.fi-margin-left-xxl {
  margin-left: 40px;
}

.c1.fi-margin-left-xxxl {
  margin-left: 60px;
}

.c1.fi-margin-left-xxxxl {
  margin-left: 80px;
}

.c1.fi-margin-left-insetXxs {
  margin-left: 2px;
}

.c1.fi-margin-left-insetXs {
  margin-left: 4px;
}

.c1.fi-margin-left-insetS {
  margin-left: 6px;
}

.c1.fi-margin-left-insetM {
  margin-left: 8px;
}

.c1.fi-margin-left-insetL {
  margin-left: 10px;
}

.c1.fi-margin-left-insetXl {
  margin-left: 16px;
}

.c1.fi-margin-left-insetXxl {
  margin-left: 20px;
}

.c1.fi-padding-xxs {
  padding: 5px;
}

.c1.fi-padding-xs {
  padding: 10px;
}

.c1.fi-padding-s {
  padding: 15px;
}

.c1.fi-padding-m {
  padding: 20px;
}

.c1.fi-padding-l {
  padding: 25px;
}

.c1.fi-padding-xl {
  padding: 30px;
}

.c1.fi-padding-xxl {
  padding: 40px;
}

.c1.fi-padding-xxxl {
  padding: 60px;
}

.c1.fi-padding-xxxxl {
  padding: 80px;
}

.c1.fi-padding-insetXxs {
  padding: 2px;
}

.c1.fi-padding-insetXs {
  padding: 4px;
}

.c1.fi-padding-insetS {
  padding: 6px;
}

.c1.fi-padding-insetM {
  padding: 8px;
}

.c1.fi-padding-insetL {
  padding: 10px;
}

.c1.fi-padding-insetXl {
  padding: 16px;
}

.c1.fi-padding-insetXxl {
  padding: 20px;
}

.c1.fi-padding-top-xxs {
  padding-top: 5px;
}

.c1.fi-padding-top-xs {
  padding-top: 10px;
}

.c1.fi-padding-top-s {
  padding-top: 15px;
}

.c1.fi-padding-top-m {
  padding-top: 20px;
}

.c1.fi-padding-top-l {
  padding-top: 25px;
}

.c1.fi-padding-top-xl {
  padding-top: 30px;
}

.c1.fi-padding-top-xxl {
  padding-top: 40px;
}

.c1.fi-padding-top-xxxl {
  padding-top: 60px;
}

.c1.fi-padding-top-xxxxl {
  padding-top: 80px;
}

.c1.fi-padding-top-insetXxs {
  padding-top: 2px;
}

.c1.fi-padding-top-insetXs {
  padding-top: 4px;
}

.c1.fi-padding-top-insetS {
  padding-top: 6px;
}

.c1.fi-padding-top-insetM {
  padding-top: 8px;
}

.c1.fi-padding-top-insetL {
  padding-top: 10px;
}

.c1.fi-padding-top-insetXl {
  padding-top: 16px;
}

.c1.fi-padding-top-insetXxl {
  padding-top: 20px;
}

.c1.fi-padding-right-xxs {
  padding-right: 5px;
}

.c1.fi-padding-right-xs {
  padding-right: 10px;
}

.c1.fi-padding-right-s {
  padding-right: 15px;
}

.c1.fi-padding-right-m {
  padding-right: 20px;
}

.c1.fi-padding-right-l {
  padding-right: 25px;
}

.c1.fi-padding-right-xl {
  padding-right: 30px;
}

.c1.fi-padding-right-xxl {
  padding-right: 40px;
}

.c1.fi-padding-right-xxxl {
  padding-right: 60px;
}

.c1.fi-padding-right-xxxxl {
  padding-right: 80px;
}

.c1.fi-padding-right-insetXxs {
  padding-right: 2px;
}

.c1.fi-padding-right-insetXs {
  padding-right: 4px;
}

.c1.fi-padding-right-insetS {
  padding-right: 6px;
}

.c1.fi-padding-right-insetM {
  padding-right: 8px;
}

.c1.fi-padding-right-insetL {
  padding-right: 10px;
}

.c1.fi-padding-right-insetXl {
  padding-right: 16px;
}

.c1.fi-padding-right-insetXxl {
  padding-right: 20px;
}

.c1.fi-padding-bottom-xxs {
  padding-bottom: 5px;
}

.c1.fi-padding-bottom-xs {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-s {
  padding-bottom: 15px;
}

.c1.fi-padding-bottom-m {
  padding-bottom: 20px;
}

.c1.fi-padding-bottom-l {
  padding-bottom: 25px;
}

.c1.fi-padding-bottom-xl {
  padding-bottom: 30px;
}

.c1.fi-padding-bottom-xxl {
  padding-bottom: 40px;
}

.c1.fi-padding-bottom-xxxl {
  padding-bottom: 60px;
}

.c1.fi-padding-bottom-xxxxl {
  padding-bottom: 80px;
}

.c1.fi-padding-bottom-insetXxs {
  padding-bottom: 2px;
}

.c1.fi-padding-bottom-insetXs {
  padding-bottom: 4px;
}

.c1.fi-padding-bottom-insetS {
  padding-bottom: 6px;
}

.c1.fi-padding-bottom-insetM {
  padding-bottom: 8px;
}

.c1.fi-padding-bottom-insetL {
  padding-bottom: 10px;
}

.c1.fi-padding-bottom-insetXl {
  padding-bottom: 16px;
}

.c1.fi-padding-bottom-insetXxl {
  padding-bottom: 20px;
}

.c1.fi-padding-left-xxs {
  padding-left: 5px;
}

.c1.fi-padding-left-xs {
  padding-left: 10px;
}

.c1.fi-padding-left-s {
  padding-left: 15px;
}

.c1.fi-padding-left-m {
  padding-left: 20px;
}

.c1.fi-padding-left-l {
  padding-left: 25px;
}

.c1.fi-padding-left-xl {
  padding-left: 30px;
}

.c1.fi-padding-left-xxl {
  padding-left: 40px;
}

.c1.fi-padding-left-xxxl {
  padding-left: 60px;
}

.c1.fi-padding-left-xxxxl {
  padding-left: 80px;
}

.c1.fi-padding-left-insetXxs {
  padding-left: 2px;
}

.c1.fi-padding-left-insetXs {
  padding-left: 4px;
}

.c1.fi-padding-left-insetS {
  padding-left: 6px;
}

.c1.fi-padding-left-insetM {
  padding-left: 8px;
}

.c1.fi-padding-left-insetL {
  padding-left: 10px;
}

.c1.fi-padding-left-insetXl {
  padding-left: 16px;
}

.c1.fi-padding-left-insetXxl {
  padding-left: 20px;
}

.c1:focus {
  position: relative;
  outline: 3px solid transparent;
}

.c1:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
}

.c1:hover {
  background: linear-gradient(0deg,hsl(212,63%,45%) 0%,hsl(212,63%,49%) 100%);
  outline: 2px solid transparent;
}

.c1:active {
  background: hsl(212,63%,37%);
}

.c1.fi-button--disabled,
.c1[disabled],
.c1:disabled {
  text-shadow: 0 1px 1px rgba(33,33,33,0.5);
  background: linear-gradient(0deg,hsl(202,7%,67%) 0%,hsl(202,7%,80%) 100%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1.fi-button--disabled::after {
  border: none;
  box-shadow: none;
}

.c1.fi-button--fullwidth {
  display: block;
  width: 100%;
}

.c1.fi-button--inverted {
  background: none;
  background-color: hsl(212,63%,45%);
  border: 1px solid hsl(0,0%,100%);
  text-shadow: none;
}

.c1.fi-button--inverted:hover {
  background: linear-gradient(-180deg,hsla(0,0%,100%,0.1) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--inverted:active {
  background: none;
  background-color: hsl(212,63%,45%);
}

.c1.fi-button--inverted.fi-button--disabled,
.c1.fi-button--inverted[disabled],
.c1.fi-button--inverted:disabled {
  opacity: 0.41;
  background: none;
  background-color: none;
}

.c1.fi-button--secondary {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
}

.c1.fi-button--secondary:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary.fi-button--disabled,
.c1.fi-button--secondary[disabled],
.c1.fi-button--secondary:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-noborder {
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  border: none;
  background-color: transparent;
}

.c1.fi-button--secondary-noborder:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-noborder:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-noborder.fi-button--disabled,
.c1.fi-button--secondary-noborder[disabled],
.c1.fi-button--secondary-noborder:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light {
  color: hsl(212,63%,45%);
  color: hsl(212,63%,45%);
  background: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(212,63%,45%);
  text-shadow: none;
  background: linear-gradient(0deg,hsl(215,100%,95%),hsl(215,100%,97%));
  border: none;
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(-180deg,hsl(202,7%,93%) 0%,hsla(0,0%,100%,0) 100%);
}

.c1.fi-button--secondary-light:active {
  background: none;
  background-color: hsl(202,7%,93%);
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  text-shadow: none;
  background: none;
  background-color: hsl(212,63%,98%);
  border-color: hsl(202,7%,67%);
}

.c1.fi-button--secondary-light:hover {
  background: linear-gradient(0deg,hsl(215,100%,97%),hsl(212,63%,98%));
}

.c1.fi-button--secondary-light:active {
  background: linear-gradient(0deg,hsl(202,7%,93%),hsl(202,7%,97%));
}

.c1.fi-button--secondary-light.fi-button--disabled,
.c1.fi-button--secondary-light[disabled],
.c1.fi-button--secondary-light:disabled {
  color: hsl(202,7%,67%);
  background: none;
  background-color: hsl(202,7%,97%);
}

.c1 > .fi-button_icon > .fi-icon {
  width: 16px;
  height: 16px;
  margin-right: 8px;
  vertical-align: middle;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.c1 > .fi-button_icon--right > .fi-icon {
  margin-right: 0;
  margin-left: 8px;
}

.c1.fi-button--disabled > .fi-button_icon {
  cursor: not-allowed;
}

<button
  aria-disabled="false"
  class="c0 fi-button c1 fi-button--secondary-noborder"
  tabindex="0"
  type="button"
>
  <span
    class="c2 fi-button_icon"
  />
  secondaryNoBorder button
  <span
    class="c2 fi-button_icon fi-button_icon--right"
  />
</button>
`;
